<resources>
    <string name="app_name">myTTR</string>
    <string name="username_message">Usernamen eingeben</string>
    <string name="button_send">Login</string>
    <string name="button_start">Start</string>
    <string name="button_liga">Oder nur Liga Ergebnisse ansehen</string>
    <string name="password_message">Passwort eingeben</string>
    <string name="read_from_foto">Aus Photo lesen</string>
    <string name="enter_manual">TTR-Rechner</string>
    <string name="select_player_first">Bitte zunächst einen Spieler auswählen</string>
    <string name="after_login_text">Der Login war erfolgreich.\n\nFolgende Möglichkeiten hast du:</string>
    <string name="main_text">Bitte Login für myTischtennis.de eingeben</string>
    <string name="not_registered_text">Wenn du noch keinen mytischtennis Premium Zugang hast, kannst du bei
     www.mytischtennis.de/community/register einen Zugang beantragen.</string>
    <string name="player_1">Spieler 1:</string>
    <string name="player_1_hint">Namen eingeben</string>
    <string name="entry_club_edit">Vereinsname eingeben</string>
    <string name="entry_club_label">Vereinsname:</string>
    <string name="entry_lastname_edit">Nachname eingeben</string>
    <string name="entry_lastname_label">Nachname:</string>
    <string name="entry_firstname_edit">Vorname eingeben</string>
    <string name="entry_firstname_label">Vorname:</string>
    <string name="entries_new_player">Spieler anlegen</string>
    <string name="btn_edit_player">Spieler\nbearbeiten…</string>
    <string name="detail_search">Suchen</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="btn_new_player">Spieler eingeben und suchen</string>
    <string name="action_select_team">Anderes Team aussuchen</string>
    <string name="btn_bilanz">Bilanzen ansehen</string>
    <string name="btn_results">Aktuelle Ergebnisse ansehen</string>
    <string name="txt_player_list">Folgende Spieler sind bereits von dir hinzugefügt worden:</string>
    <string name="txt_player_list_empty">Du hast noch keine Spieler ausgewählt.\nBenutze die Schaltflächen oben</string>
    <string name="txt_search_explain">Entweder Vorname und Nachname oder Vereinsname eingeben. Oder alles zusammen.</string>
    <string name="result_txt">Das Ergebnis</string>
    <string name="txt_enterttr">Du hast deinen Registrierungsvorgang nicht abgeschlossen.\nEinige Funktionen werden nicht richtig funktionieren!\nDarum konnte dein Verein und deine Punkte nicht festgestellt werden.\nDu musst diese jetzt noch eingeben</string>
    <string name="txt_enter_ak">Hier kannst du deine Änderungskonstante eingeben.</string>
    <string name="pref_sync">Synchronisiere Punkte mit mytischtennis</string>
    <string name="pref_sync_summ">In einem Intervall werden die Punkte verglichen, ob es neue Werte für dich gibt.</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_about">&#220;ber</string>
    <string name="menu_impressum">Impressum</string>
    <string name="select">Auswählen</string>
    <string name="notifcation_result">Neue Punkte</string>
    <string name="pref_user">Benutzer / Passwort speichern</string>
    <string name="pref_user_summ">Der Benutzer und das Passwort werden für die nächste Benutzung gespeichert und ein automatisches Login durchgeführt.</string>
    <string name="pref_error_summ">Bei Fehlern wird ein Fehler Report an Crashlytics gesendet</string>
    <string name="pref_error">Fehler Report</string>
    <string name="pref_version_sum">1x die Woche wird auf eine neue Version geprüft.</string>
    <string name="pref_version">Versionsprüfung</string>
    <string name="next_appointments_search">Über nächste Termine suchen</string>
    <string name="action_mannschafts_info">Mannschaftsinfo</string>
    <string name="action_calendar">Kalender</string>
    <string name="action_favorite">Als Favorit speichern</string>
    <string name="action_head2head">Head 2 Head anschauen</string>
    <string name="action_edit_favorites">Favorit verwalten</string>
    <string name="action_filter">Filter</string>
    <string name="text_appointment_selection">Du kannst unten die nächsten Termine von dir sehen, wähle einen aus, dann
        kannst du einen Spieler aus gegnerischen Mannschaft auswählen
    </string>
    <string name="clublist">Vereinsrangl.</string>
    <string name="statistik">Statistiken</string>
    <string name="player_sim">Simulation</string>
    <string name="search">Suche</string>
    <string name="spielplan">Spielplan</string>
    <string name="aufstellung">Aufstellung</string>
    <string name="tabelle">Tabelle</string>
    <string name="sample_nameclub">"Wolfgang Heinzelmann\n1. FC Bayer Uerdingen"</string>
    <string name="calc">Berechnen</string>
    <string name="qttr">QTTR</string>
    <string name="text_select_other_team">Wähle ein anderes Team aus, in dem Ersatz spielst</string>
    <string name="text_events">Wähle ein Spiel aus um Details zu sehen</string>
    <string name="text_event_details">Wähle ein Spieler aus um Details zu sehen</string>
    <string name="text_calendar">Hier siehst du die Termine,, die du in deinen Kalender importieren kannst</string>
    <string name="text_select_player">Durch die Auswahl eines Teamspielers kannst du TTR Werte auch für ihn berechnen. Du siehst dann oben ein Symbol mit dem du es wieder beenden kannst.</string>
    <string name="text_select_team">Nach der Auswahl eines Teams kannst du dir die Spieler des Teams auswählen.</string>
    <string name="text_search_result">Folgende Spieler wurden gefunden.</string>
    <string name="imp_text">Impressum
\n
\nAngaben gemäß § 5 TMG
\n
\nJuergen Melzer
\n53757 St. Augustin
\n
\nKontakt
\n
\nE-Mail: ju.melzer@gmail.com (mailto:ju.melzer@gmail.com)
\n
\nHaftungsausschluss
\n
\nHaftung für Inhalte
\nDie Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
\n
\nHaftung für Links
\nUnser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
\n
\nUrheberrecht
\nDie durch die Seitenbetreiber erstellten bzw. verwendeten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
\n
</string>
    <string name="loadplayerfromclub"> Mehr aus dem Verein </string>
    <string name="addallentriestocal">Alle Einträge in den Kalendar übernehmen</string>
    <string name="enter_clubname_sum">Hier kannst du den Namen deines Vereins eingeben, falls er nicht automatisch ermittelt werden konnte.</string>
    <string name="enter_clubname">Verein eingeben</string>
    <string name="enter_ak_sum">Hier kannst du deine Änderungskonstante eingeben, wenn sie nicht 16 ist.</string>
    <string name="enter_ak">Änderungskonstante eingeben</string>
    <string name="enter_time_sum">Einstellung des Zeitintervalls für neue Punkte etc..</string>
    <string name="enter_time">Zeitintervall eingeben</string>
    <string name="reset">Zurücksetzen</string>
    <string name="error_search_required_fields">Bitte Vornamen und Nachamen oder Verein angeben!</string>
    <string name="favorite_added">Die Liga wurde zu deinen Favoriten hinzugefügt. Du kannst sie auf der Startseite bearbeiten</string>
    <string name="favorite_club_added">Der Verein wurde zu deinen Favoriten hinzugefügt. Du kannst sie auf der Startseite bearbeiten</string>
    <string name="favorite_search_added">Die Suche wurde zu deinen Favoriten hinzugefügt. Du kannst sie auf der Startseite bearbeiten</string>
    <string name="favorite_player_added">Der Spieler wurde zu deinen Favoriten hinzugefügt. Du kannst sie auf der Startseite bearbeiten</string>
    <string name="favorite_exists">Die Eintrag existiert bereits in deinen Favoriten</string>
    <string name="favorite_error">Fehler beim Favoriten setzen</string>
    <string name="favorite_error_name">Der Spieler hat keinen Namen</string>
    <string name="player_removed_from_list">Der Spieler wurde entfernt</string>
    <string name="info">Info</string>
    <string name="liga">Liga</string>
    <string name="liga_rangl">Liga Rangl.</string>
    <string name="logout">Abmelden</string>
    <string name="version_check">Versionsprüfung</string>
    <string name="simulation">Simulation beenden</string>
    <string name="arrow_desc">Pfeil</string>
    <string name="verband_label">Verband:</string>
    <string name="name_label">Name:</string>
    <string name="month">September</string>
    <string name="header_tournaments">Bitte Verband auswählen</string>
    <string name="header_cups">Bitte Cup auswählen</string>
    <string name="saison_label">Saison:</string>
    <string name="kat_label">Kategorie:</string>
    <string name="liga_label">Liga:</string>
    <string name="bezirk_label">Bezirk:</string>
    <string name="kreis_label">Kreis:</string>
    <string name="kontakt_label">Kontakt:</string>
    <string name="lokale_label">Spiellokale:</string>
    <string name="ueberschrift_liga">Ligen</string>
    <string name="label_kontakt">Kontakt:</string>
    <string name="label_position">Position:</string>
    <string name="label_name">Name, Vorname:</string>
    <string name="label_einsaetze">Einsätze:</string>
    <string name="header_tournament_sample">Kontakt</string>
    <string name="hint_ak">Wert zwischen 16 und 28</string>
    <string name="header_event_name">Name</string>
    <string name="header_reqion">Region</string>
    <string name="header_freeplaces">Frei</string>
    <string name="header_event_date">Datum</string>
    <string name="header_event_event">Begegnung</string>
    <string name="header_event_ak">AK</string>
    <string name="header_event_games">Sp</string>
    <string name="header_event_ttr">TTR</string>
    <string name="header_event_sum">+/-</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="club">Verein</string>
    <string name="points">Punkte</string>
</resources>