<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- <CheckBoxPreference
             android:key="SYNC_TTR"
             android:title="@string/pref_sync"
             android:summary="@string/pref_sync_summ"
             android:defaultValue="true" />-->
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="SAVE_USER"
        android:summary="@string/pref_user_summ"
        android:title="@string/pref_user"/>
    <PreferenceScreen
        android:summary="@string/enter_clubname_sum"
        android:title="@string/enter_clubname">
        <intent android:action="ManualClubName"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:summary="@string/enter_ak_sum"
        android:title="@string/enter_ak">
        <intent android:action="AK"/>
    </PreferenceScreen>
    <!--<EditTextPreference android:key="MANUAL_CLUB"
                        android:title="Verein eingeben"
                        android:summary="Verein eingeben2"  />-->
</PreferenceScreen>