<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) Juergen Melzer
  ~
  ~ 2014 - 2015.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Help -->


    <item
        android:id="@+id/action_remove_sim"
        android:icon="@drawable/ic_sim_black"
        app:showAsAction="ifRoom"
        android:title="@string/simulation"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_impressum"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/menu_impressum"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="103"
        app:showAsAction="never"
        android:title="@string/logout"/>
</menu>