<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Juergen Melzer
  ~
  ~ 2015.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingLeft="10dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="87dp"
        android:id="@+id/imageView"
        android:src="@drawable/home_self"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/main_text"
        android:id="@+id/textView8"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_message"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_message"
        android:password="true"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:textSize="12sp"
        android:onClick="login"
        android:background="@drawable/buttonshape"
        android:text="@string/button_send"
        />
        <Button
            android:id="@+id/button_ligs"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:onClick="liga"
            android:textSize="10sp"
            android:text="@string/button_liga"
            android:layout_marginTop="10dp"
            android:background="#ff000000"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_registered_text"
        android:autoLink="web"
        android:id="@+id/textView9"
        android:textSize="12dp"/>


</LinearLayout>

