<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:weightSum="10">

    <TextView
        android:id="@+id/selected_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        tools:text="Bla Blun (1200)"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/text_events"
        android:textSize="16sp"/>

    <LinearLayout style="@style/HeaderListStyle">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.5"
            android:text="@string/header_event_date"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4.0"
            android:text="@string/header_event_event"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:layout_marginLeft="6dp"
            android:text="@string/header_event_ak"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0px"
            android:layout_marginLeft="6dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:text="@string/header_event_games"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0px"
            android:layout_marginLeft="6dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:text="@string/header_event_ttr"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="2dp"
            android:layout_weight="0.9"
            android:gravity="right"
            android:text="@string/header_event_sum"/>
    </LinearLayout>

    <View style="@style/ListLine"/>

    <ListView
        android:id="@+id/eventlist"
        tools:listitem="@layout/eventrow_linear"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </ListView>
</LinearLayout>