<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_cups"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSaison"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelVerband"
            style="@style/MyLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/name_label" />

        <Spinner
            android:id="@+id/spinner_verband"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/datelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/arrow_desc"
            android:src="@drawable/ic_action_left" />

        <TextView
            android:id="@+id/month"
            style="@style/MyLabel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/month" />

        <ImageButton
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/arrow_desc"
            android:src="@drawable/ic_action_right" />
    </LinearLayout>

    <LinearLayout style="@style/HeaderListStyle">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/header_event_date" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3.0"
            android:text="@string/header_event_name" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/header_freeplaces" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_weight="1.5"
            android:text="@string/header_reqion" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="  " />
    </LinearLayout>

    <View style="@style/ListLine" />

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cup_row"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:listitem="@layout/cup_row">

    </ListView>
</LinearLayout>