<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) Juergen Melzer
  ~
  ~ 2014.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Help -->
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:showAsAction="ifRoom"
        android:title="Home"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:showAsAction="ifRoom"
        android:title="Logout"/>
    <item
        android:id="@+id/action_remove_sim"
        android:icon="@drawable/ic_sim_black"
        android:showAsAction="ifRoom"
        android:title="Simulation"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_impressum"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_impressum"/>
</menu>